# parallax

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RULES.md  config.minimal.yaml  config.yaml  parallax.yaml
.github/workflows/: build.yaml
docs/: ARCHITECTURE.md  RULES.md  config.minimal.yaml
docs/integrations/: generic.md  openclaw.md
integrations/openclaw/: openclaw.plugin.json  package.json
integrations/openclaw/src/: index.ts
rules/cel/: model-manipulation.yaml  policies.yaml  privilege-escalation.yaml
rules/regex/: secrets.yaml
rules/sigma/: dangerous-tools.yaml  prompt-injection.yaml  reconnaissance.yaml  shadow-it.yaml
shim/: openclaw.plugin.json  package.json
shim/src/: index.ts
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  schema.rs
src/engine/: chain.rs  context.rs  mod.rs  result.rs
src/evaluators/: cel_eval.rs  mod.rs  pattern_eval.rs  regex_eval.rs  sigma_eval.rs  sql_eval.rs
src/integrations/: mod.rs  openclaw.rs
src/reporting/: audit.rs  mod.rs  webhook.rs
src/server/: api.rs  mod.rs  proxy.rs
